# users/src/main/java/com/paranoiax/users/infrastructure/rest/api/devices/v1/DevicesController.java
@@ -8,8 +8,8 @@ import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.nio.charset.StandardCharsets;
 import java.util.UUID;
@@ -19,33 +19,32 @@ import java.util.UUID;
 @RequestMapping("/v1/users/devices")
 public class DevicesController {
 
-    @PostMapping(
-            value = "/link-token",
-            consumes = MediaType.MULTIPART_FORM_DATA_VALUE
-    )
-    public ResponseEntity<GenerateLinkTokenResponse> generateLinkToken(
-            @RequestPart("encrypted_blob") MultipartFile encryptedBlob,
-            @RequestParam("identity_key") String identityKey
+    @PostMapping("/migrations/upload-url")
+    public ResponseEntity<CreateUploadUrlResponse> createUploadUrl(
+            @RequestHeader("Idempotency-Key") String idempotencyKey,
+            @AuthenticationPrincipal UUID userId
     ) {
-        if (encryptedBlob.isEmpty()) {
-            return ResponseEntity.badRequest().build();
-        }
+        return ResponseEntity.status(HttpStatus.CREATED).body(new CreateUploadUrlResponse(
+                "test-blob-id",
+                "test-upload-url"
+        ));
+    }
 
-        return ResponseEntity.status(HttpStatus.CREATED).body(new GenerateLinkTokenResponse(
+    @PostMapping("/link-token")
+    public ResponseEntity<CreateLinkTokenResponse> createLinkToken(
+            @RequestHeader("Idempotency-Key") String idempotencyKey,
+            @AuthenticationPrincipal UUID userId,
+            @Valid @RequestBody CreateLinkTokenRequest request
+    ) {
+        return ResponseEntity.status(HttpStatus.CREATED).body(new CreateLinkTokenResponse(
                 "test-link-token",
                 "test-challenge",
                 1000L
         ));
     }
 
-    @PostMapping(
-            value = "/link-token/blob",
-            consumes = MediaType.APPLICATION_JSON_VALUE,
-            produces = MediaType.APPLICATION_OCTET_STREAM_VALUE
-    )
-    public ResponseEntity<Resource> downloadBlob(
-            @Valid @RequestBody DownloadBlobRequest request
-    ) {
+    @PostMapping("/migrations/download-url")
+    public ResponseEntity<Resource> createDownloadUrl(@Valid @RequestBody DownloadBlobRequest request) {
         byte[] testData = "TestData".getBytes(StandardCharsets.UTF_8);
         Resource resource = new ByteArrayResource(testData);
 
@@ -58,6 +57,7 @@ public class DevicesController {
     @PutMapping("/{device_id}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void register(
+            @RequestHeader("Idempotency-Key") String idempotencyKey,
             @PathVariable("device_id") UUID deviceId,
             @Valid @RequestBody RegisterDeviceRequest request
     ) {
